Added margin to top and bottom of search form

--- a/views/stories/index.hbs
+++ b/views/stories/index.hbs
@@ -1,5 +1,5 @@
 <h1>Stories</h1>
-<ul>
+<ul class="search-form">
     <li>    
         <form id="search-site"  action='/stories/search/:query' method='get'>
             <div class="input-group">
